# faq

./: README.md  pyproject.toml  report.md  requirements.txt  test.py
db/: chroma.sqlite3
src/faq/: crew.py  main.py
src/faq/config/: agents.yaml  tasks.yaml
src/faq/tools/: pre_process_docs.py  qdrant_vector_search_tool.py  website_scraper_tool.py
