[project]
name = "faq"
version = "0.1.0"
description = "FAQ using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "crewai[tools]>=0.140.0,<1.0.0",
    "requests>=2.32.4",
]

[project.scripts]
faq = "faq.main:run"
run_crew = "faq.main:run"
train = "faq.main:train"
replay = "faq.main:replay"
test = "faq.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
